// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doAction:crud reload 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新CRUD数据加载请求
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Crud"
            data-id="crud_reload"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table __PRISMUI_COMPONENT_CLASS_PREFIX__Crud-body"
              data-id="crud_reload"
              style="--Table-thead-height: 0px; --Table-column-3-width: 0px; --Table-column-4-width: 0px; --Table-column-5-width: 0px; --Table-column-6-width: 0px; --Table-column-7-width: 0px; --Table-column-8-width: 0px; --Table-column-9-width: 0px;"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-fixedTop"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-toolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Table-headToolbar"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-actions"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ColumnToggler"
                    >
                      <button
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                      >
                        <icon-mock
                          class="icon icon-columns"
                          icon="columns"
                        />
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ColumnToggler-caret"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-contentWrap"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content"
                >
                  <table
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table"
                  >
                    <colgroup>
                      <col
                        data-index="3"
                      />
                      <col
                        data-index="4"
                      />
                      <col
                        data-index="5"
                      />
                      <col
                        data-index="6"
                      />
                      <col
                        data-index="7"
                      />
                      <col
                        data-index="8"
                      />
                      <col
                        data-index="9"
                      />
                    </colgroup>
                    <thead>
                      <tr
                        class=""
                      >
                        <th
                          class=""
                          data-index="3"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                ID
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="3"
                          />
                        </th>
                        <th
                          class=""
                          data-index="4"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                Rendering engine
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="4"
                          />
                        </th>
                        <th
                          class=""
                          data-index="5"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                Browser
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="5"
                          />
                        </th>
                        <th
                          class=""
                          data-index="6"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                Platform(s)
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="6"
                          />
                        </th>
                        <th
                          class=""
                          data-index="7"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                Engine version
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="7"
                          />
                        </th>
                        <th
                          class=""
                          data-index="8"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                CSS grade
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="8"
                          />
                        </th>
                        <th
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-operationCell"
                          data-index="9"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                操作
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="9"
                          />
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table-tr __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--odd __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-index="0"
                      >
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            1
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident - pbz7l
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Internet Explorer 4.0
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Win 95+
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            4
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            X
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__OperationField"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                详情
                              </span>
                            </button>
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm text-danger"
                              type="button"
                            >
                              <span>
                                删除
                              </span>
                            </button>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table-tr __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--even __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-index="1"
                      >
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            2
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident - tir4m8
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Internet Explorer 5.0
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Win 95+
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            5
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            C
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__OperationField"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                详情
                              </span>
                            </button>
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm text-danger"
                              type="button"
                            >
                              <span>
                                删除
                              </span>
                            </button>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table-tr __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--odd __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-index="2"
                      >
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            3
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident - wcn6f
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Internet Explorer 5.5
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Win 95+
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            5.5
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            A
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__OperationField"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                详情
                              </span>
                            </button>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm is-disabled text-danger"
                              disabled=""
                            >
                              <span>
                                删除
                              </span>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table-tr __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--even __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-index="3"
                      >
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            4
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident - uwmcbf
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Internet Explorer 6
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Win 98+
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            6
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            A
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__OperationField"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                详情
                              </span>
                            </button>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm is-disabled text-danger"
                              disabled=""
                            >
                              <span>
                                删除
                              </span>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table-tr __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--odd __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-index="4"
                      >
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            5
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident - yjgst7
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Internet Explorer 7
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Win XP SP2+
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            7
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            A
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__OperationField"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                详情
                              </span>
                            </button>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm is-disabled text-danger"
                              disabled=""
                            >
                              <span>
                                删除
                              </span>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table-tr __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--even __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-index="5"
                      >
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            6
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Trident - w9ee2k
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            AOL browser (AOL desktop)
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Win XP
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            6
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            A
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__OperationField"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                详情
                              </span>
                            </button>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm is-disabled text-danger"
                              disabled=""
                            >
                              <span>
                                删除
                              </span>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table-tr __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--odd __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-index="6"
                      >
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            7
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Gecko - hi6cd
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Firefox 1.0
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Win 98+ / OSX.2+
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            1.7
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            A
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__OperationField"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                详情
                              </span>
                            </button>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm is-disabled text-danger"
                              disabled=""
                            >
                              <span>
                                删除
                              </span>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table-tr __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--even __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-index="7"
                      >
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            8
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Gecko - 4kxz6
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Firefox 1.5
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Win 98+ / OSX.2+
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            1.8
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            A
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__OperationField"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                详情
                              </span>
                            </button>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm is-disabled text-danger"
                              disabled=""
                            >
                              <span>
                                删除
                              </span>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table-tr __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--odd __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-index="8"
                      >
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            9
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Gecko - x0u91o
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Firefox 2.0
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Win 98+ / OSX.2+
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            1.8
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            A
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__OperationField"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                详情
                              </span>
                            </button>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm is-disabled text-danger"
                              disabled=""
                            >
                              <span>
                                删除
                              </span>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table-tr __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--even __PRISMUI_COMPONENT_CLASS_PREFIX__Table-tr--1th"
                        data-index="9"
                      >
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            10
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Gecko - iou01
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Firefox 3.0
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            Win 2k+ / OSX.3+
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            1.9
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__PlainField"
                          >
                            A
                          </span>
                        </td>
                        <td
                          class=""
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__OperationField"
                          >
                            <button
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                              type="button"
                            >
                              <span>
                                详情
                              </span>
                            </button>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--link __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm is-disabled text-danger"
                              disabled=""
                            >
                              <span>
                                删除
                              </span>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-toolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Table-footToolbar"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Crud-toolbar"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Crud-toolbar-item __PRISMUI_COMPONENT_CLASS_PREFIX__Crud-toolbar-item--left"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Crud-statistics"
                    >
                      1/18 共：171 项
                    </div>
                  </div>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Crud-toolbar-item __PRISMUI_COMPONENT_CLASS_PREFIX__Crud-toolbar-item--right"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Crud-pager"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-wrap-size--md"
                      >
                        <ul
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination--sm __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
                        >
                          <li
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-prev is-disabled"
                          >
                            <span>
                              <icon-mock
                                class="icon icon-left-arrow"
                                icon="left-arrow"
                              />
                            </span>
                          </li>
                          <li
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item is-active"
                          >
                            <a
                              role="button"
                            >
                              1
                            </a>
                          </li>
                          <li
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
                          >
                            <a
                              role="button"
                            >
                              2
                            </a>
                          </li>
                          <li
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
                          >
                            <a
                              role="button"
                            >
                              3
                            </a>
                          </li>
                          <li
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
                          >
                            <a
                              role="button"
                            >
                              4
                            </a>
                          </li>
                          <li
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
                          >
                            <a
                              role="button"
                            >
                              5
                            </a>
                          </li>
                          <li
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
                          >
                            <a
                              role="button"
                            >
                              6
                            </a>
                          </li>
                          <li
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
                          >
                            <a
                              role="button"
                            >
                              7
                            </a>
                          </li>
                          <li
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-ellipsis"
                          >
                            <a
                              role="button"
                            >
                              ...
                            </a>
                            <span
                              class="icon"
                            >
                              <icon-mock
                                class="icon icon-arrow-double-right"
                                icon="arrow-double-right"
                              />
                            </span>
                          </li>
                          <li
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-pager-item"
                          >
                            <a
                              role="button"
                            >
                              18
                            </a>
                          </li>
                          <li
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-next"
                          >
                            <span>
                              <icon-mock
                                class="icon icon-right-arrow"
                                icon="right-arrow"
                              />
                            </span>
                          </li>
                        </ul>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-inputGroup __PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-item"
                        >
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-inputGroup-left"
                          >
                            跳转至
                          </span>
                          <input
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-inputGroup-input"
                            type="text"
                            value=""
                          />
                          <span
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Pagination-inputGroup-right"
                          >
                            前往
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:crud reload with data1 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新CRUD数据加载请求，同时追加参数date
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Crud"
            data-id="crud_reload"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table __PRISMUI_COMPONENT_CLASS_PREFIX__Crud-body"
              data-id="crud_reload"
              style="--Table-thead-height: 0px; --Table-column-3-width: 0px; --Table-column-4-width: 0px; --Table-column-5-width: 0px; --Table-column-6-width: 0px; --Table-column-7-width: 0px; --Table-column-8-width: 0px; --Table-column-9-width: 0px;"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-fixedTop"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-toolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Table-headToolbar"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-actions"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ColumnToggler"
                    >
                      <button
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                      >
                        <icon-mock
                          class="icon icon-columns"
                          icon="columns"
                        />
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ColumnToggler-caret"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-contentWrap"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content"
                >
                  <table
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table"
                  >
                    <colgroup>
                      <col
                        data-index="3"
                      />
                      <col
                        data-index="4"
                      />
                      <col
                        data-index="5"
                      />
                      <col
                        data-index="6"
                      />
                      <col
                        data-index="7"
                      />
                      <col
                        data-index="8"
                      />
                      <col
                        data-index="9"
                      />
                    </colgroup>
                    <thead>
                      <tr
                        class=""
                      >
                        <th
                          class=""
                          data-index="3"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                ID
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="3"
                          />
                        </th>
                        <th
                          class=""
                          data-index="4"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                Rendering engine
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="4"
                          />
                        </th>
                        <th
                          class=""
                          data-index="5"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                Browser
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="5"
                          />
                        </th>
                        <th
                          class=""
                          data-index="6"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                Platform(s)
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="6"
                          />
                        </th>
                        <th
                          class=""
                          data-index="7"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                Engine version
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="7"
                          />
                        </th>
                        <th
                          class=""
                          data-index="8"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                CSS grade
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="8"
                          />
                        </th>
                        <th
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-operationCell"
                          data-index="9"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                操作
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="9"
                          />
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-placeholder"
                      >
                        <td
                          colspan="7"
                        >
                          <icon-mock
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-placeholder-empty-icon icon icon-desk-empty"
                            icon="desk-empty"
                          />
                          暂无数据
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-overlay"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner--overlay"
                  data-testid="spinner"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`doAction:crud reload with data2 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default mb-2"
            type="button"
          >
            <span>
              刷新CRUD数据加载请求，同时追加按钮所在数据域的所有数据
            </span>
          </button>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Crud"
            data-id="crud_reload"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table __PRISMUI_COMPONENT_CLASS_PREFIX__Crud-body"
              data-id="crud_reload"
              style="--Table-thead-height: 0px; --Table-column-3-width: 0px; --Table-column-4-width: 0px; --Table-column-5-width: 0px; --Table-column-6-width: 0px; --Table-column-7-width: 0px; --Table-column-8-width: 0px; --Table-column-9-width: 0px;"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-fixedTop"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-toolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Table-headToolbar"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-actions"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ColumnToggler"
                    >
                      <button
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--default __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-sm"
                      >
                        <icon-mock
                          class="icon icon-columns"
                          icon="columns"
                        />
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ColumnToggler-caret"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-contentWrap"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content"
                >
                  <table
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-table"
                  >
                    <colgroup>
                      <col
                        data-index="3"
                      />
                      <col
                        data-index="4"
                      />
                      <col
                        data-index="5"
                      />
                      <col
                        data-index="6"
                      />
                      <col
                        data-index="7"
                      />
                      <col
                        data-index="8"
                      />
                      <col
                        data-index="9"
                      />
                    </colgroup>
                    <thead>
                      <tr
                        class=""
                      >
                        <th
                          class=""
                          data-index="3"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                ID
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="3"
                          />
                        </th>
                        <th
                          class=""
                          data-index="4"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                Rendering engine
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="4"
                          />
                        </th>
                        <th
                          class=""
                          data-index="5"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                Browser
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="5"
                          />
                        </th>
                        <th
                          class=""
                          data-index="6"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                Platform(s)
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="6"
                          />
                        </th>
                        <th
                          class=""
                          data-index="7"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                Engine version
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="7"
                          />
                        </th>
                        <th
                          class=""
                          data-index="8"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                CSS grade
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="8"
                          />
                        </th>
                        <th
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-operationCell"
                          data-index="9"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TableCell--title"
                          >
                            <span
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                            >
                              <span>
                                操作
                              </span>
                            </span>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-content-colDragLine"
                            data-index="9"
                          />
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-placeholder"
                      >
                        <td
                          colspan="7"
                        >
                          <icon-mock
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Table-placeholder-empty-icon icon icon-desk-empty"
                            icon="desk-empty"
                          />
                          暂无数据
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-overlay"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner--overlay"
                  data-testid="spinner"
                >
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon __PRISMUI_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
